fixed some style

--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>reeny</title>
+  <title>Reeny</title>
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <!-- Font Aweseoms -->
   <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" defer integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
     crossorigin="anonymous"></script>
+
+  <link rel="shortcut icon" type="image/ico" href="/static/favicon-1024.png" />
 
   <script>
     window.FontAwesomeConfig = {
